namespace java com.sankuai.meituan.finance.mis.web

exception MisTException {
    1: i32 code; // 异常编码
    2: string message; // 异常原因
}